--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Engineer</h3>
+            <div class="subheading mb-3">Samsung Austin Semiconductor</div>
+            <p>Supporting Process and Equipment roles in a semiconductor foundry.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2011 - August 2012</span>
+          </div>
+        </div>
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Manufacturing Engineer</h3>
@@ -126,17 +137,6 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">November 2012 - December 2014</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Tool Design Intern</h3>
-            <div class="subheading mb-3">Covidien (Medtronic)</div>
-            <p>Co-op internship program working fulltime as a tool design engineer for the production of a brand new electronic surgical device. Tool designs were completed in Pro/Engineer Creo and consisted of repeatable pressing operations, hand tools and automated equipment for producing laproscopic cannulas. Active participation in PFMEA meetings to determine ideal installation procedures and identify potential manufacturing failures.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - August 2012</span>
           </div>
         </div>
 
