--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Engineer</h3>
             <div class="subheading mb-3">Samsung Austin Semiconductor</div>
-            <p>Supporting Process and Equipment roles in a semiconductor foundry. Sustaining work maintaining equipment run time on a daily basis.</p>
+            <p>Supporting Process and Equipment roles in a semiconductor foundry. Sustaining work by responding to equipment alarms and troubleshooting tool sensors.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2011 - August 2012</span>
