--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Engineer</h3>
             <div class="subheading mb-3">Samsung Austin Semiconductor</div>
