Updating Samsung Responsiibilities

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Engineer</h3>
             <div class="subheading mb-3">Samsung Austin Semiconductor</div>
-            <p>Supporting Process and Equipment roles in a semiconductor foundry. Sustaining work by responding to equipment alarms and troubleshooting tool sensors.</p>
+            <p>Supporting Process and Equipment roles in a semiconductor foundry. Sustaining deposition tools by responding to equipment alarms and troubleshooting tool sensors. Making sustainment and preventative maintenance decisions based on internal data analytics. I also have taken on new projects improving overall equipment efficiency by optimizing maintenance intervals decreasing the need for unplanned maintenance.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2011 - August 2012</span>
@@ -139,7 +139,6 @@
             <span class="text-primary">November 2012 - December 2014</span>
           </div>
         </div>
-
       </div>
 
     </section>
