Updating Samsung Date

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <p>Supporting Process and Equipment roles in a semiconductor foundry. Sustaining deposition tools by responding to equipment alarms and troubleshooting tool sensors. Making sustainment and preventative maintenance decisions based on internal data analytics. I also have taken on new projects improving overall equipment efficiency by optimizing maintenance intervals decreasing the need for unplanned maintenance.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - August 2012</span>
+            <span class="text-primary">November 2021 - Current</span>
           </div>
         </div>
 
