--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <img class="img-fluid mx-auto mb-2" src="img/portfolio.jpg" alt="">
             <div>Project Description: This is the most amazing blockchain project ever. Check it out with this <a href="">link</a>.</div>
           </div>
-        </div>-->
+        </div>
 
       </div>
     </section>
