--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">My Awesome Blockchain Project #2</h3>
-            <div class="subheading mb-3">Project Tagline</div>
+            <h3 class="mb-0">NFT Tutorial Project</h3>
+            <div class="subheading mb-3">SXSW Punks</div>
             <img class="img-fluid mx-auto mb-2" src="img/portfolio.jpg" alt="">
-            <div>Project Description: This is the most amazing blockchain project ever. Check it out with this <a href="">link</a>.</div>
+            <div>This NFT tutorial project uses the ERC165 standard to generate custom artwork. A front end application was also created for users to log on and await a Countdown until the project "drops". You can Mint one for free using the Rinkeby test network! <a href="https://sxswpunks.on.fleek.co/">link</a>.</div>
           </div>
         </div>
 
