--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <div class="resume-content">
             <h3 class="mb-0">NFT Tutorial Project</h3>
             <div class="subheading mb-3">SXSW Punks</div>
-            <img class="img-fluid mx-auto mb-2" src="img/portfolio.jpg" alt="">
+            <img class="img-fluid mx-auto mb-2" src="img/sxswpunks_screenshot.jpg" alt="">
             <div>This NFT tutorial project uses the ERC165 standard to generate custom artwork. A front end application was also created for users to log on and await a Countdown until the project "drops". You can Mint one for free using the Rinkeby test network! <a href="https://sxswpunks.on.fleek.co/">link</a>.</div>
           </div>
         </div>
