Updating NFT Caption

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <h3 class="mb-0">NFT Tutorial Project</h3>
             <div class="subheading mb-3">SXSW Punks</div>
             <img class="img-fluid mx-auto mb-2" src="img/sxswpunks_screenshot.jpg" alt="">
-            <div>This NFT tutorial project uses the ERC165 standard to generate custom artwork. A front end application was also created for users to log on and await a Countdown until the project "drops". You can Mint one for free using the Rinkeby test network! <a href="https://sxswpunks.on.fleek.co/">link</a>.</div>
+            <div>This tutorial project uses the ERC165 standard to generate NFTs made with custom artwork. A front end application allows users to log on and await a countdown until the project "drops". You can mint one for free using the Rinkeby test network! <a href="https://sxswpunks.on.fleek.co/">link</a>.</div>
           </div>
         </div>
 
