On Fleek Link - Holly Coin

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <h3 class="mb-0">Self Study Blockchain Course</h3>
             <div class="subheading mb-3">HollyCoin Token and Exchange</div>
             <img class="img-fluid mx-auto mb-2" src="img/portfolio1.jpg" alt="">
-            <div>This is a program I completed to learn Smart Contracts on the Ethereum network. I created my own token and an exchange to host it on. It is affectionately named after my neighborhood in Austin, TX. Click the link to be taken to the website!  <a href="http://holly-coin.surge.sh/" target="_blank">link</a>.</div>
+            <div>This is a program I completed to learn Smart Contracts on the Ethereum network. I created my own token and an exchange to host it on. It is affectionately named after my neighborhood in Austin, TX. Click the link to be taken to the website!  <a href="https://hollycoin.on.fleek.co/" target="_blank">link</a>.</div>
           </div>
         </div>
 
