--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="subheading mb-5">2910 E 17th St #113 · Austin, TX 78702 · (860) 670-8406 ·
           <a href="mailto:peter.pisarz@gmail.com">peter.pisarz@gmail.com</a>
         </div>
-        <p class="lead mb-5">Mechanical Engineer with extensive experience in Aerospace Manufacturing looking for new opportunities in Austin, TX. Proficient in mechanical design, tool design and process improvements.</p>
+        <p class="lead mb-5">Mechanical Engineer with extensive experience in Aerospace Manufacturing looking for new opportunities in Austin, TX. Proficient in mechanical design, and process improvements.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/peter-pisarz-6b339088/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -101,6 +101,9 @@
             <h3 class="mb-0">Engineer</h3>
             <div class="subheading mb-3">Samsung Austin Semiconductor</div>
             <p>Supporting Process and Equipment roles in a semiconductor foundry. Sustaining deposition tools by responding to equipment alarms and troubleshooting tool sensors. Making sustainment and preventative maintenance decisions based on internal data analytics. I also have taken on new projects improving overall equipment efficiency by optimizing maintenance intervals decreasing the need for unplanned maintenance.</p>
+            <div class="subheading">
+              <img src="img/Samsung.jpg" alt="">
+            </div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">November 2021 - Current</span>
@@ -110,8 +113,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Manufacturing Engineer</h3>
-            <div class="subheading mb-3">Pratt & Whitney</div>
-            <p>Manufacturing Engineer and Process Owner of the NEO PW1000G Fan Case. Implementing tooling improvements for efficient maneuverability of the Fan Case including lightweight lifting fixtures and ergonomic build stands. Resequencing installation of hardware to be in a methodical clockwise order to reduce build times. Advanced technological projects include Laser Projection assisted installation and Digital Smart Torque systems.</p>
+            <section className="experience">
+              <div class="subheading mb-3">Pratt & Whitney</div>
+              <p>Manufacturing Engineer and Process Owner of the NEO PW1000G Fan Case. Implementing tooling improvements for efficient maneuverability of the Fan Case including lightweight lifting fixtures and ergonomic build stands. Resequencing installation of hardware to be in a methodical clockwise order to reduce build times. Advanced technological projects include Laser Projection assisted installation and Digital Smart Torque systems.</p>
+              <div class="subheading">
+                <img src="img/Pratt.jpg" alt="">
+              </div>
+                      
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2018 - October 2020</span>
@@ -123,6 +131,9 @@
             <h3 class="mb-0">Tooling Engineer</h3>
             <div class="subheading mb-3">Boeing</div>
             <p>Tool Requirements Engineer conceptualizing a complete list of Overhaul and Maintenance Tooling to support the 777X Folding Wing Tip. The Folding Wing Tip is the first of its kind in commercial aviation. Maintenance tooling supported the removal and reinstallation of all hardware, hinge pins and locking mechanisms at height for MRO facilities worldwide. Replied to daily service requests from airline customers with questions on maintenance tooling.</p>
+            <div class="subheading">
+              <img src="img/Boeing.jpg" alt="">
+            </div>          
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2015 - November 2017</span>
@@ -134,6 +145,9 @@
             <h3 class="mb-0">Tool Design Engineer</h3>
             <div class="subheading mb-3">Belcan / Collins Aerospace</div>
             <p>Extensive tool design for maintenance and overhaul on a wide variety of commerical aerospace systems. These systems included the Boeing 787 Environmental Control System, various Air Starters, EM Hydraulic Actuators for military aircraft. Designs completed in SolidWorks utilizing tolerance stack analysis and GD&T. Tools varied from lifting fixtures, pressure caps, component and bearing install, support equipment and high speed balance arbors.</p>
+            <div class="subheading">
+              <img src="img/Belcan.jpg" alt="">
+            </div>  
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">November 2012 - December 2014</span>
