Samsung Paragraph Update

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Engineer</h3>
             <div class="subheading mb-3">Samsung Austin Semiconductor</div>
-            <p>Supporting Process and Equipment roles in a semiconductor foundry. Sustaining deposition tools by responding to equipment alarms and troubleshooting tool sensors. Making sustainment and preventative maintenance decisions based on internal data analytics. I also have taken on new projects improving overall equipment efficiency by optimizing maintenance intervals decreasing the need for unplanned maintenance.</p>
+            <p>Supporting Process and Equipment roles in a semiconductor foundry. Designed experiments to improve overall equipment efficiency by increasing planned maintenance in order to decrease unplanned breakdown maintenance. Clean recipes were run on a more frequent basis reducing chip defects to a level which passes control limits in 100% of batches. The down time of these tools were reduced overall by preventing tool breakdowns. Qualification runs passed on their first attempt eliminating the need for two to three additional runs which would last 6 hours each. This reduction was completed on tools which process 800+ wafers per day. I also perform sustaining work concurrently with these responsibilities by responding to equipment alarms and troubleshooting tool sensors based on internal data analytics.</p>
             <div class="subheading">
               <img src="img/Samsung.jpg" alt="">
             </div>
