--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <h1 class="mb-0">Peter
           <span class="text-primary">Pisarz</span>
         </h1>
-        <div class="subheading mb-5">2910 E 17th St #113 · Austin, TX 78702 · (860) 670-8406 ·
+        <div class="subheading mb-5">4310 Avenue B Apt 209 · Austin, TX 78751 · (860) 670-8406 ·
           <a href="mailto:peter.pisarz@gmail.com">peter.pisarz@gmail.com</a>
         </div>
-        <p class="lead mb-5">Mechanical Engineer with extensive experience in Aerospace Manufacturing looking for new opportunities in Austin, TX. Proficient in mechanical design, and process improvements.</p>
+        <p class="lead mb-5">Mechanical Engineer with extensive experience in the Aerospace industry looking for new opportunities in Austin, TX. Proficient in mechanical design, and process improvements.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/peter-pisarz-6b339088/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -80,12 +80,12 @@
           <a href="https://github.com/peterpisarz" target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://www.instagram.com/gjjpete/" target="_blank">
-            <i class="fab fa-instagram"></i>
+          <a href="https://www.twitter.com/peterpisarz/" target="_blank">
+            <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://www.facebook.com/pisarzpej/" target="_blank">
+          <!--<a href="https://www.facebook.com/pisarzpej/" target="_blank">
             <i class="fab fa-facebook-f"></i>
-          </a>
+          </a>-->
         </div>
       </div>
     </section>
@@ -95,6 +95,20 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Mechanical Design Engineer</h3>
+            <div class="subheading mb-3">Acutronic</div>
+            <p>Mechanical Design Engineer focused on building and designing microturbine engines ranging from 50 - 70 pounds of thrust. My daily tasks involved building complete prototype engines with little to no work instructions. Creating subassembly manufacturing drawings in Siemens NX. Making design improvements to fuel lines for improved manufacturability. Balancing rotational hardware spinning in excess of 100,000 rpms to be compliant with ISO 21940. Writing work instructions for assembly optimized for mass production. Involved in testing procedures for protype engines determining vibrational output at critical speeds. Analyzing parts for thermal interference fits. Performing Ansys structural analysis on in-flight vehicle mounts. Creating pok-a-yok (mistake proofing) design changes to eliminate misassembly</p>
+            <div class="subheading">
+              <img src="img/turbine.png" alt="">
+            </div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2022 - Current</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -106,7 +120,7 @@
             </div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">November 2021 - Current</span>
+            <span class="text-primary">November 2021 - August 2022</span>
           </div>
         </div>
 
@@ -194,6 +208,15 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h2>
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Custom BLDC Motor</h3>
+            <div class="subheading mb-3">3D Printed Radial Flux Electric Motor</div>
+            <img class="img-fluid mx-auto mb-2" src="img/BLDC.png" alt="">
+            <div>A fully functioning 3D Printed Radial Flux Brushless DC motor I designed independently from the ground up. The motor consists of a custom 3D Printed Stator, Rotor and Stator Cap. I selected all of the hardware including the bearings, N52 Magnets and driveshaft. The coils are wound with 20 AWG enamled copper magnetic wire and are driven by an RC electronic speed controller. I post continuous updates including videos on my Twitter so please take a visit there as well! <a href="https://twitter.com/peterpisarz" target="_blank">@peterpisarz</a>.</div>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
