Github Link for BLDC

--- a/index.html
+++ b/index.html
@@ -204,7 +204,6 @@
 
     <hr class="m-0">
 
-
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h2>
@@ -214,7 +213,7 @@
             <h3 class="mb-0">Custom BLDC Motor</h3>
             <div class="subheading mb-3">3D Printed Radial Flux Electric Motor</div>
             <img class="img-fluid mx-auto mb-2" src="img/BLDC.png" alt="">
-            <div>A fully functioning 3D Printed Radial Flux Brushless DC motor I designed independently from the ground up. The motor consists of a custom 3D Printed Stator, Rotor and Stator Cap. I selected all of the hardware including the bearings, N52 Magnets and driveshaft. The coils are wound with 20 AWG enamled copper magnetic wire and are driven by an RC electronic speed controller. I post continuous updates including videos on my Twitter so please take a visit there as well! <a href="https://twitter.com/peterpisarz" target="_blank">@peterpisarz</a>.</div>
+            <div>A fully functioning 3D Printed Radial Flux Brushless DC motor I designed independently from the ground up. The motor consists of a custom 3D Printed Stator, Rotor and Stator Cap. I selected all of the hardware including the bearings, N52 Magnets and driveshaft. The coils are wound with 20 AWG enamled copper magnetic wire and are driven by an RC electronic speed controller. You can see it in action on my <a href="https://github.com/peterpisarz/BLDC-Project" target="_blank">GitHub</a>.<br> I post continuous updates including videos on my Twitter so please take a visit there as well! <a href="https://twitter.com/peterpisarz" target="_blank">@peterpisarz</a>.</div>
           </div>
         </div>
 
@@ -265,13 +264,13 @@
           <li class="list-inline-item">
             <i class="fab fa-node-js"></i>
           </li>
-          <li class="list-inline-item">
+          <!--<li class="list-inline-item">
             <i class="fab fa-sass"></i>
-          </li>
+          </li>-->
           <li class="list-inline-item">
             <i class="fab fa-bootstrap"></i>
           </li>
-          <li class="list-inline-item">
+          <!--<li class="list-inline-item">
             <i class="fab fa-wordpress"></i>
           </li>
           <li class="list-inline-item">
@@ -279,7 +278,7 @@
           </li>
           <li class="list-inline-item">
             <i class="fab fa-grunt"></i>
-          </li>
+          </li>-->
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
           </li>
