Adding LVG Project

--- a/index.html
+++ b/index.html
@@ -219,6 +219,15 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Leverage Coin Cryptocurrency Exchange</h3>
+            <div class="subheading mb-3">Exchange and Token smart contracts in Solidity with a fully usable UI.</div>
+            <img class="img-fluid mx-auto mb-2" src="img/portfolio2.png" alt="">
+            <div>This is my second Token and Cryptocurrency Exchange project. The smart contracts for the Token and the Exchange were written in Solidity and deployed to the Goerli Testnet. Redux allows the UI to talk to the contracts on the blockchain and live update pricing. The exchange hosts multiple cryptocurrencies and is capable of offering more.  <a href="https://leverage-exchange.on.fleek.co/" target="_blank">link</a>.</div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Self Study Blockchain Course</h3>
             <div class="subheading mb-3">HollyCoin Token and Exchange</div>
             <img class="img-fluid mx-auto mb-2" src="img/portfolio1.jpg" alt="">
