--- a/index.html
+++ b/index.html
@@ -219,6 +219,15 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Raspberry Pi Projects</h3>
+            <div class="subheading mb-3">Independent Raspberry Pi Projects</div>
+            <img class="img-fluid mx-auto mb-2" src="img/LED.gif" alt="">
+            <div>These projects originated from a course offered by 42Electronics. While much of the setup is identical, I have made significant programming changes adding to their complexity and user experience. I have completed many sample projects and the list is growing so please see the entire Repository on my github. There you will find code (Python), schematics and full demo videos. <a href="https://github.com/peterpisarz/RaspberryPiProjects" target="_blank">link</a>.</div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Leverage Coin Cryptocurrency Exchange</h3>
             <div class="subheading mb-3">Exchange and Token smart contracts in Solidity with a fully usable UI.</div>
             <img class="img-fluid mx-auto mb-2" src="img/portfolio2.png" alt="">
